...
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.Movies.Toolbar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <ListView
            android:id="@+id/lvMovies"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>
...
