...
    <string name="duraci_n">Duración:</string>
    <string name="g_nero_s">Género(s):</string>
    <string name="puntuaci_n_media">Puntuación media:</string>
    <string name="puntuaci_n_sumaria">Puntuación sumaria:</string>
    <string name="filter_menu_title">Filtrar</string>
    <string name="filter_by_genre">Género</string>
    <string name="filter_by_decade">Década</string>
    <string name="filter_by_status">Estado</string>
    <string name="filter_limpiar">Limpiar</string>
    <string name="cancelar">Cancelar</string>
    <string name="aplicar">Aplicar</string>
    <string name="lista">Lista</string>
    <string name="columnaTitulo">Título</string>
...
